# TinyLoRA

./: .gitignore  AUDIT.md  CREDITS.md  NOTICE  README.md  audit.txt  pyproject.toml  requirements.txt
configs/: replication_13p_fast.yaml  replication_13p_paper_gsm8k.yaml
notebooks/: TinyLoRA_2D_Loss_Surface.ipynb  TinyLoRA_Replication_13p.ipynb
scripts/: __init__.py  inspect_model_budget.py  run_budget13_sweep.py  train_grpo_tinylora.py  train_sft_tinylora.py
scripts/analysis/: __init__.py  scan_loss_surface.py
tests/: test_adapter.py  test_checkpoint_manager.py  test_data.py  test_loss_surface.py  test_reward.py
tinylora/: __init__.py  adapter.py  checkpoint_manager.py  data.py  gsm8k.py  heartbeat.py  notifier.py  reward.py  training_utils.py
